<resources>
    <string name="app_name">TennisPartner</string>

    <!-- Facebook -->
    <string name="facebook_application_id" translatable="false">907216152811840</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb907216152811840</string>

    <!-- Welcome screen strings -->
    <string name="slide_1_title">Tennis Partner</string>
    <string name="slide_1_desc">Find a tennis partner</string>

    <string name="slide_2_title">Tennis courts</string>
    <string name="slide_2_desc">Find the nearest tennis court</string>

    <string name="slide_3_title">Compete</string>
    <string name="slide_3_desc">Be the best in your city</string>

    <string name="slide_4_title">Tournaments</string>
    <string name="slide_4_desc">Play or organize tournaments</string>

    <string name="welcome_button">Start</string>

    <!-- Strings related to Account Kit -->


    <!-- Strings related to login -->
    <string name="textInputName">Full name</string>
    <string name="textInputEmail" translatable="false">E-mail</string>
    <string name="continue_login">Continue</string>

    <string name="continue_facebook_button">Continue with Facebook</string>
    <string name="loginSeparator_text">or</string>
    <string name="accountkit_cancelled">Login cancelled</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="loginDescription">We need a little bit more info about you in order to find you the best matching partner</string>
    <string name="birthday">Birthday</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="error_wrong_data">Full name not correct</string>
    <string name="error_field_required">This field is required</string>
    <string name="camera_dialog_title">Picture source</string>
    <string name="camera_dialog_cancel">Cancel</string>
    <string name="camera_dialog_camera">Camera</string>
    <string name="camera_dialog_gallery">Gallery</string>
    <string name="single_tab_title" translatable="false">Single</string>
    <string name="double_tab_title">Double</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="logout">Logout</string>
    <string name="partner_activity_title">Players nearby</string>
    <string name="nav_header_desc">User avatar</string>
    <string name="action_settings" translatable="false">Filter</string>
    <string name="rankings_activity_title">Rankings</string>
    <string name="tournaments_activity_title">Tournaments</string>
    <string name="info">About</string>

    <string name="distance_title">Distance</string>
    <string name="location_dialog_title">Location needed</string>
    <string name="location_dialog_description">We need access to your location in order to show users around you</string>
    <string name="location_dialog_allow">Allow</string>
    <string name="age_title">Age</string>
    <string name="user_detail_last_matches">Last matches</string>
    <string name="user_detail_gender">Gender</string>
    <string name="user_detail_location">Last location</string>
    <string name="service_not_available" translatable="false">Service not available</string>
    <string name="invalid_lat_long_used" translatable="false">Invalid location data used</string>
    <string name="no_address_found" translatable="false">No address found</string>
    <string name="address_found" translatable="false">Address found</string>
    <string name="location_not_available">Not available</string>
    <string name="user_detail_info">User info</string>
    <string name="user_detail_age">Age</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="invitation_title">Invite friends</string>
    <string name="invitation_message">Get new Tennis Partner app</string>
    <string name="invitation_cta">Get TennisPartner</string>
    <string name="login_text">Sign in</string>
    <string name="please_wait">Please wait...</string>
    <string name="title_activity_court">Courts nearby</string>
    <string name="positive_button">OK</string>
    <string name="dialog_filter_title">Filter</string>
    <string name="apply_button">Apply</string>
    <string name="partner_radius" translatable="false">partner_radius</string>
    <string name="distance_text_value" translatable="false">%1$d km</string>
    <string name="court_succesfully_added">Tennis court successfully added!</string>
    <string name="court_map_style_title">Map style</string>
    <string name="court_map_style_normal">Normal</string>
    <string name="court_map_style_hybrid">Hybrid</string>
    <string name="add_court">Add</string>

    <!-- Message Status -->
    <string name="message_sending">Sending</string>
    <string name="message_failed">Failed</string>

    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="resend_message">Resend</string>
    <string name="delete_message">Delete</string>
    <string name="member_list_title">Members</string>
    <string name="invite_button_text">Add</string>
    <string name="invite_member_title">Add members</string>
    <string name="invite_members">Add members</string>
    <string name="view_members">View members</string>
    <string name="enter_message">Enter message</string>
    <string name="no_data_available">No players nearby!\nYou can try to increase search distance or invite friends with the button below</string>
    <string name="chat_list_title">Inbox</string>
    <string name="group_channel_list_file_message_text">%1$s has uploaded a file</string>
    <string name="channel_name">TennisPartner</string>
    <string name="channel_description">TennisPartner messages</string>
    <string name="action_messages">Messages</string>
    <string name="no_chats_available">No messages</string>
    <string name="group_chat_schedule">Schedule match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suggest_match_date">Suggest date for the match</string>
    <string name="suggest_match_time">Suggest time for the match</string>
    <string name="court_title">Choose a court</string>
    <string name="action_adduser">Add user</string>
    <string name="navigation_drawer_open" translatable="false">Drawer open</string>
    <string name="navigation_drawer_close" translatable="false">Drawer closed</string>
    <string name="loading_text">Please wait…</string>
    <string name="no_location_warning">You need to allow Tennis Partner to access your location in order to find players nearby</string>
    <string name="ask_location_button">Allow</string>
    <string name="schedule_match_text_value">%1$s suggested a meeting on %2$s at %3$s</string>
    <string name="reload_button">Reload</string>
    <string name="accept_suggested_match">Accept suggested term</string>
    <string name="clear_suggested_match">Clear suggested term</string>
    <string name="edit_suggested_match">Edit suggested term</string>
</resources>
