<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/court_add"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="@string/add_court"
        app:showAsAction="ifRoom|withText" />

    <item
        android:title="@string/court_map_style_title"
        android:icon="@drawable/ic_collections_black_24dp"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/court_map_style_normal"
                android:title="@string/court_map_style_normal" />
            <item
                android:id="@+id/court_map_style_hybrid"
                android:title="@string/court_map_style_hybrid" />
        </menu>
    </item>
</menu>