<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_group_chat_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_group_chat"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/layout_group_chat_match"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccentDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="16dp"
        android:visibility="gone"
        android:alpha="0">

        <TextView
            android:id="@+id/text_group_chat_match"
            android:layout_gravity="start"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="start|center_vertical"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white" />

        <ImageButton
            android:id="@+id/button_group_chat_match_accept"
            app:srcCompat="@drawable/ic_done"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="end|center_vertical"
            android:contentDescription="@string/accept_suggested_match"
            android:focusable="true" />

        <ImageButton
            android:id="@+id/button_group_chat_match_edit"
            app:srcCompat="@drawable/ic_edit"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="end|center_vertical"
            android:contentDescription="@string/edit_suggested_match"
            android:focusable="true" />

        <ImageButton
            android:id="@+id/button_group_chat_match_clear"
            app:srcCompat="@drawable/ic_clear"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:gravity="end|center_vertical"
            android:contentDescription="@string/clear_suggested_match"
            android:focusable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_group_chat_chatbox"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:minHeight="48dp">

        <!--<ImageButton
            android:id="@+id/button_group_chat_upload"
            app:srcCompat="@drawable/ic_add_black_24dp"
            android:background="?attr/selectableItemBackground"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="Upload file"
            android:layout_gravity="bottom"/>-->

        <EditText
            android:id="@+id/edittext_group_chat_message"
            android:hint="@string/enter_message"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:maxLines="6" />

        <ImageButton
            android:id="@+id/button_group_chat_send"
            app:srcCompat="@drawable/send_button"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:contentDescription="Send message" />
    </LinearLayout>

    <View
        android:layout_above="@id/layout_group_chat_chatbox"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#DfDfDf" />

    <LinearLayout
        android:layout_above="@id/layout_group_chat_chatbox"
        android:layout_below="@+id/layout_group_chat_match"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_group_chat"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:clipToPadding="false"
            android:scrollbars="vertical">

        </androidx.recyclerview.widget.RecyclerView>

        <LinearLayout
            android:id="@+id/layout_group_chat_current_event"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_group_chat_current_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>


